tests/sksl/errors/ReservedNameDvec2.glsl
### Compilation failed:

error: 1: name 'dvec2' is reserved
int dvec2;
    ^^^^^
1 error
